--- a/Pitch/View/FirstLastNameCell.xib
+++ b/Pitch/View/FirstLastNameCell.xib
@@ -12,27 +12,29 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomPollCell" rowHeight="178" id="KGk-i7-Jjw" customClass="CustomPollCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="178"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FirstLastNameCell" id="KGk-i7-Jjw" customClass="FirstLastNameCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="177.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Poll" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Qa-Mf-j4n">
-                        <rect key="frame" x="5" y="5" width="63" height="18"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FirstName LastName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vdE-Yh-ehJ">
+                        <rect key="frame" x="10" y="10" width="300" height="23.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="1Qa-Mf-j4n" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="Qry-YN-TFr"/>
-                    <constraint firstItem="1Qa-Mf-j4n" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="q3c-fK-N1G"/>
+                    <constraint firstAttribute="trailing" secondItem="vdE-Yh-ehJ" secondAttribute="trailing" constant="10" id="0Bk-fF-J5Q"/>
+                    <constraint firstItem="vdE-Yh-ehJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="LzW-20-l3n"/>
+                    <constraint firstItem="vdE-Yh-ehJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="sYW-K6-gmm"/>
+                    <constraint firstAttribute="bottom" secondItem="vdE-Yh-ehJ" secondAttribute="bottom" constant="10" id="vee-mB-DyT"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
-            <point key="canvasLocation" x="47.826086956521742" y="80.357142857142847"/>
+            <point key="canvasLocation" x="137.68115942028987" y="113.83928571428571"/>
         </tableViewCell>
     </objects>
 </document>
