--- a/Pitch/View/AgeCell.xib
+++ b/Pitch/View/AgeCell.xib
@@ -19,33 +19,41 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="177.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age Restrictions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URi-Pk-aQi">
-                        <rect key="frame" x="5" y="5" width="117.5" height="119.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Indicate Age Restrictions, If Any" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URi-Pk-aQi">
+                        <rect key="frame" x="5" y="5" width="229" height="102"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="List age restrictions or type  'None'" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="0KW-fU-Gng">
-                        <rect key="frame" x="10" y="132.5" width="300" height="40"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5R1-9t-Wfn">
+                        <rect key="frame" x="26" y="117" width="40" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="AeE-fQ-7zW"/>
+                            <constraint firstAttribute="height" constant="40" id="7Vx-2f-HQr"/>
+                            <constraint firstAttribute="width" constant="40" id="flA-sf-9fl"/>
                         </constraints>
-                        <nil key="textColor"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                        <textInputTraits key="textInputTraits"/>
-                    </textField>
+                        <state key="normal" title="18+"/>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VHW-rA-XtS">
+                        <rect key="frame" x="106" y="117" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="CZq-FN-cUT"/>
+                            <constraint firstAttribute="width" constant="40" id="GlK-xE-IeW"/>
+                        </constraints>
+                        <state key="normal" title="21+"/>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="0KW-fU-Gng" firstAttribute="top" secondItem="URi-Pk-aQi" secondAttribute="bottom" constant="8" id="Rb4-se-64A"/>
-                    <constraint firstAttribute="bottom" secondItem="0KW-fU-Gng" secondAttribute="bottom" constant="5" id="bFP-GP-FCv"/>
+                    <constraint firstItem="VHW-rA-XtS" firstAttribute="leading" secondItem="5R1-9t-Wfn" secondAttribute="trailing" constant="40" id="1Yz-hT-Icr"/>
+                    <constraint firstItem="5R1-9t-Wfn" firstAttribute="top" secondItem="URi-Pk-aQi" secondAttribute="bottom" constant="10" id="60z-RN-65d"/>
+                    <constraint firstItem="VHW-rA-XtS" firstAttribute="centerY" secondItem="5R1-9t-Wfn" secondAttribute="centerY" id="DJs-2C-PU6"/>
+                    <constraint firstItem="5R1-9t-Wfn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="emx-7X-VQQ"/>
                     <constraint firstItem="URi-Pk-aQi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="hMl-T8-Xpr"/>
-                    <constraint firstAttribute="trailing" secondItem="0KW-fU-Gng" secondAttribute="trailing" constant="10" id="jxy-7s-BpQ"/>
-                    <constraint firstItem="0KW-fU-Gng" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="vSl-5u-Blc"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="5R1-9t-Wfn" secondAttribute="bottom" constant="10" id="ic5-ur-gMG"/>
                     <constraint firstItem="URi-Pk-aQi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="zTp-RH-Ab7"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
-            <point key="canvasLocation" x="137.59999999999999" y="172.26386806596702"/>
+            <point key="canvasLocation" x="137.59999999999999" y="171.81409295352324"/>
         </tableViewCell>
     </objects>
 </document>
