--- a/Pitch/EventDetails.storyboard
+++ b/Pitch/EventDetails.storyboard
@@ -13,7 +13,7 @@
         <!--Event Details View Controller-->
         <scene sceneID="dAd-SO-LZY">
             <objects>
-                <viewController id="mAu-0e-4D9" customClass="EventDetailsViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Details" modalPresentationStyle="formSheet" id="mAu-0e-4D9" customClass="EventDetailsViewController" sceneMemberID="viewController">
                     <view key="view" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Lmm-er-96k">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="II8-Iq-3e8" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                        <rect key="frame" x="0.0" y="48" width="414" height="848"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JRX-zP-f3F">
                                                 <rect key="frame" x="87" y="28" width="240" height="240"/>
@@ -58,20 +58,28 @@
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="50"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="II8-Iq-3e8" secondAttribute="bottom" id="ArH-48-LzU"/>
                                     <constraint firstItem="II8-Iq-3e8" firstAttribute="leading" secondItem="M2m-oC-tJc" secondAttribute="leading" id="SDd-h4-Sok"/>
-                                    <constraint firstItem="II8-Iq-3e8" firstAttribute="top" secondItem="M2m-oC-tJc" secondAttribute="top" id="Wuw-OG-JJr"/>
+                                    <constraint firstItem="II8-Iq-3e8" firstAttribute="top" secondItem="M2m-oC-tJc" secondAttribute="top" constant="48" id="Wuw-OG-JJr"/>
                                     <constraint firstItem="II8-Iq-3e8" firstAttribute="width" secondItem="M2m-oC-tJc" secondAttribute="width" id="dMv-8Y-bxY"/>
-                                    <constraint firstItem="II8-Iq-3e8" firstAttribute="height" secondItem="M2m-oC-tJc" secondAttribute="height" priority="250" id="pfw-PD-S7z"/>
+                                    <constraint firstItem="II8-Iq-3e8" firstAttribute="height" secondItem="M2m-oC-tJc" secondAttribute="height" priority="250" constant="-48" id="pfw-PD-S7z"/>
                                     <constraint firstAttribute="trailing" secondItem="II8-Iq-3e8" secondAttribute="trailing" id="z8s-wu-y9W"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="50"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="M2m-oC-tJc" secondAttribute="bottom" id="1ix-9R-a3N"/>
                             <constraint firstItem="M2m-oC-tJc" firstAttribute="top" secondItem="Lmm-er-96k" secondAttribute="top" id="Ild-zx-6ev"/>
@@ -79,6 +87,11 @@
                             <constraint firstItem="M2m-oC-tJc" firstAttribute="leading" secondItem="Lmm-er-96k" secondAttribute="leading" id="drk-Ug-1fJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cpc-Ku-ued"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="50"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                     <size key="freeformSize" width="414" height="896"/>
                     <connections>
